--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
           <li><a href="#introduction">Introduction</a></li>
           <li><a href="#methods">Methods</a></li>
           <li><a href="#results">Results</a></li>
+          <li><a href="#discussion">Discussion</a></li>
           <li><a href="#conclusion">Conclusion</a></li>
           <li><a href="#references">References</a></li>
         </ul>
@@ -157,11 +158,15 @@
         </div>
         <div id="map" style="height: 400px"></div>
         <h3>Summary Statistics</h3>
-        <p>Summary Statistics for the largest cluster.</p>
+        <p>
+          These are some summary statistics generated from the largest Health
+          cluster from the Census Tracts model. This is an example of how these
+          boundaries could be used for potential analysis in the future.
+        </p>
         <p align="center">
           <img src="img/table.png" alt="Summary Statistics Table" />
         </p>
-        <h2>Discussion</h2>
+        <h2 id="discussion">Discussion</h2>
         <h3>Comparative Analysis of Hexbin vs. Census Tract Methods</h3>
         <p>
           The hex-bin and census tract methodologies reveal similar
