--- a/index.html
+++ b/index.html
@@ -42,6 +42,58 @@
         margin: 20px auto;
         max-width: 100%;
       }
+      body {
+        font-family: Arial, sans-serif;
+        margin: 20px;
+        background-color: #212529; /* Dark background color */
+        color: #f8f9fa; /* Light text color */
+      }
+      p {
+        color: #f8f9fa; /* Light text color */
+      }
+      h1,
+      h2,
+      h3,
+      li {
+        color: #f8f9fa; /* Light text color */
+      }
+      .markdown-body a {
+        color: #6cb2eb; /* Lighter blue color for links */
+      }
+
+      .markdown-body a:hover {
+        color: #51a0e0; /* Slightly darker blue color for links on hover */
+      }
+      .container {
+        max-width: 800px;
+        margin: auto;
+      }
+
+      .markdown-body {
+        box-sizing: border-box;
+        min-width: 200px;
+        max-width: 980px;
+        margin: 0 auto;
+        padding: 45px;
+      }
+
+      img {
+        display: block;
+        margin: 20px auto;
+        max-width: 100%;
+      }
+
+      .btn-outline-secondary {
+        color: #f8f9fa; /* Light text color for buttons */
+        background-color: #343a40; /* Dark background color for buttons */
+        border-color: #343a40; /* Dark border color for buttons */
+      }
+
+      .btn-outline-secondary:hover {
+        color: #212529; /* Dark text color for buttons on hover */
+        background-color: #495057; /* Slightly lighter background color for buttons on hover */
+        border-color: #495057; /* Slightly lighter border color for buttons on hover */
+      }
     </style>
   </head>
   <body>
