made buttons prettier

--- a/index.html
+++ b/index.html
@@ -202,8 +202,13 @@
           of public-facing documents that illustrate the economic landscape of
           San Diego County.
         </p>
-        <div class="container">
-          <div class="btn-group" role="group" aria-label="Model Selection">
+        <div class="container" style="padding: 0px 0px 10px 0px">
+          <div
+            class="btn-group center col-center"
+            role="group"
+            aria-label="Model Selection"
+            style="width: 100%"
+          >
             <input
               type="radio"
               class="btn-check"
@@ -229,7 +234,7 @@
           </div>
 
           <div
-            class="btn-group"
+            class="btn-group col-center"
             role="group"
             aria-label="Activity Center Selection"
           >
