reduced padding for phones

--- a/index.html
+++ b/index.html
@@ -37,6 +37,11 @@
         margin: 0 auto;
         padding: 45px;
       }
+      @media screen and (max-width: 730px) {
+        .markdown-body {
+          padding: 0 !important;
+        }
+      }
       img {
         display: block;
         margin: 20px auto;
