made css more mobile friendly :)

--- a/index.html
+++ b/index.html
@@ -42,6 +42,11 @@
           padding: 0 !important;
         }
       }
+      @media screen and (max-width: 460px) {
+        .makesmall {
+          font-size: 0.5rem !important;
+        }
+      }
       img {
         display: block;
         margin: 20px auto;
@@ -250,7 +255,7 @@
               id="healthBtn"
               autocomplete="off"
             />
-            <label class="btn btn-outline-secondary" for="healthBtn"
+            <label class="btn btn-outline-secondary makesmall" for="healthBtn"
               >Health Activity Center</label
             >
 
@@ -261,7 +266,7 @@
               id="conBtn"
               autocomplete="off"
             />
-            <label class="btn btn-outline-secondary" for="conBtn"
+            <label class="btn btn-outline-secondary makesmall" for="conBtn"
               >Construction Activity Center</label
             >
 
@@ -272,7 +277,7 @@
               id="profBtn"
               autocomplete="off"
             />
-            <label class="btn btn-outline-secondary" for="profBtn"
+            <label class="btn btn-outline-secondary makesmall" for="profBtn"
               >Professional Activity Center</label
             >
 
@@ -284,7 +289,7 @@
               autocomplete="off"
               checked
             />
-            <label class="btn btn-outline-secondary" for="retBtn"
+            <label class="btn btn-outline-secondary makesmall" for="retBtn"
               >Retail Activity Center</label
             >
           </div>
